2004-04-18  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/ref/PhantomReference/phantom.java: Call
	Thread.yield().

	* gnu/testlet/java/io/File/security.java: Delete all temporary files
	and directories in the finally block.

	* gnu/testlet/java/net/Socket/SocketTest.java: mail.gnu.org was
	renamed mx10.gnu.org.
	* gnu/testlet/java/net/Socket/jdk12.java: Likewise.
	* gnu/testlet/java/net/Socket/jdk13.java: Likewise.
	* gnu/testlet/java/net/Socket/jdk14.java: Likewise.

2004-04-18  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/TestSecurityManager2.java: Add private harness and
	use it for extra debug output.
	* gnu/testlet/java/io/File/security.java: Add tmpdir2, write and
	delete permissions. Use it for setReadOnly() and dir.delete test.

2004-04-16  Mark Wielaard  <mark@klomp.org>

	* README: Add documentation for batch_run and runner scripts.

2004-04-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/awt/image/ComponentColorModel/
	createCompatibleSampleModel.java: Remove unneeded import
	javax.imageio.ImageTypeSpecifier.

2004-04-15  Archie Cobbs  <archie@dellroad.org>

	* gnu/testlet/java/lang/ref/PhantomReference/phantom.java: Give the
	runtime some more hints (Thread.yield/System.gc) that it should
	really garbage collect.

2004-04-15  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/lang/Character/unicode.java:
	Added CharInfo to Uses: tag.

2004-04-14  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/image/ComponentColorModel/
	createCompatibleSampleModel.java: New tests.

2004-04-14  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/image/DataBufferByte/
	getDataType.java, getElem.java: New tests.

	* gnu/testlet/java/awt/image/DataBufferDouble/
	getDataType.java, getElem.java: New tests.

	* gnu/testlet/java/awt/image/DataBufferFloat/
	getDataType.java, getElem.java: New tests.

	* gnu/testlet/java/awt/image/DataBufferInt/
	getDataType.java, getElem.java: New tests.
